# ds_algo

./: .gitignore  CMakeLists.txt  README.md  helloWorld.cpp  note.md
Adder/: adder.cpp  adder.h
Sort/: bubbleSort.cpp  bubbleSort.h  mergeSort.cpp  mergeSort.h  quickSort.cpp  sort.h
cracking/arraysAndStrings/: checkPermutation.cpp  checkPermutation.h  isUnique.cpp  isUnique.h  oneAway.cpp  oneAway.h  palindromPermutation.h  palindromePermutation.cpp  rotateMatrix.cpp  rotateMatrix.h  stringCompression.cpp  stringCompression.h  stringRotation.cpp  stringRotation.h  urlify.cpp  urlify.h  zeroMatrix.cpp  zeroMatrix.h
cracking/cAndCpp/: copyNode.cpp  copyNode.h  lastKLines.cpp  lastKLines.h  reverseString.cpp  reverseString.h  smartPointer.cpp  smartPointer.h
cracking/linkedLists/: deleteMiddleNode.cpp  deleteMiddleNode.h  intersection.cpp  intersection.h  loopDetection.cpp  loopDetection.h  palindrome.cpp  palindrome.h  partition.cpp  partition.h  removeDups.cpp  removeDups.h  returnKthToLast.cpp  returnKthToLast.h  sumLists.cpp  sumLists.h
cracking/stacksAndQueues/: queueViaStacks.cpp  queueViaStacks.h  sortStack.cpp  sortStack.h  stackMin.cpp  stackMin.h  stackOfPlates.cpp  stackOfPlates.h  threeInOne.h
cracking/treesAndGraphs/: minimalTree.cpp  minimalTree.h  routeBetweenNodes.cpp  routeBetweenNodes.h
crackingTestInputs/arraysAndStrings/: RotateMatrixInput.txt
crackingTestInputs/cAndCpp/lastKLines/: lastKLines_lessThanK.txt  lastKLines_moreThanK.txt
dataStructures/: linkedList.h  singlyLinkedListNode.h
